--- a/Project 1/preview.themeforest.net/item/solvero-web-mobile-development-service-elementor-template-kit/full_screen_preview/39843453f42d.html
+++ b/Project 1/preview.themeforest.net/item/solvero-web-mobile-development-service-elementor-template-kit/full_screen_preview/39843453f42d.html
@@ -50,8 +50,8 @@
   </head>
   <body class="full-screen-preview">
     <div class="preview__header" data-view="ctaHeader" data-item-id="39843453">
-  <div class="preview__envato-logo">
-    <a class="header-envato_market" href="https://themeforest.net/item/solvero-web-mobile-development-service-elementor-template-kit/39843453">Envato Market</a>
+  <!-- <div class="preview__envato-logo"> 
+        <a class="header-envato_market" href="https://themeforest.net/item/solvero-web-mobile-development-service-elementor-template-kit/39843453">Envato Market</a>
   </div>
 
   <div id="js-preview__actions" class="preview__actions">
@@ -59,6 +59,8 @@
     <a class="header-buy-now e-btn--3d -color-primary" href="https://themeforest.net/checkout/from_item/39843453?license=regular">Buy now</a>
   </div>
 </div>
+-->
+
 </div>
 <iframe class="full-screen-preview__frame" src="https://templatekits.themewarrior.com/solvero/template-kit/homepage/" name="preview-frame" frameborder="0" noresize="noresize" data-view="fullScreenPreview" allow="geolocation 'self'; autoplay 'self'">
 </iframe>
