--- a/preview.themeforest.net/item/solvero-web-mobile-development-service-elementor-template-kit/full_screen_preview/39843453f42d.html
+++ b/preview.themeforest.net/item/solvero-web-mobile-development-service-elementor-template-kit/full_screen_preview/39843453f42d.html
@@ -49,8 +49,8 @@
     
   </head>
   <body class="full-screen-preview">
-    <div class="preview__header" data-view="ctaHeader" data-item-id="39843453">
-  <!-- <div class="preview__envato-logo"> 
+  <!--  <div class="preview__header" data-view="ctaHeader" data-item-id="39843453">
+   <div class="preview__envato-logo"> 
         <a class="header-envato_market" href="https://themeforest.net/item/solvero-web-mobile-development-service-elementor-template-kit/39843453">Envato Market</a>
   </div>
 
