Major Updated Main

--- a/radiustheme.com/demo/html/techkit/404.html
+++ b/radiustheme.com/demo/html/techkit/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-<!-- Mirrored from radiustheme.com/demo/html/techkit/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:34 GMT -->
+
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:34 GMT -->
 <head>
     <!-- Page Title -->
     <title>
-      Techkit Home Two - Best It Solution Provider - HTML5 Template 2021
+      Deltech Technologies Home Two - Best It Solution Provider - HTML5 Template 2021
     </title>
 
     <!-- Meta Data -->
@@ -167,5 +167,5 @@
     <script src="assets/js/custom.js"></script>
   </body>
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:35 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:35 GMT -->
 </html>
