--- a/radiustheme.com/demo/html/techkit/blog-details-no-sidebar.html
+++ b/radiustheme.com/demo/html/techkit/blog-details-no-sidebar.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-<!-- Mirrored from radiustheme.com/demo/html/techkit/blog-details-no-sidebar.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:47 GMT -->
+
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/blog-details-no-sidebar.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:47 GMT -->
 <head>
     <!-- Page Title -->
     <title>
-      Techkit Home Two - Best It Solution Provider - HTML5 Template 2021
+      Deltech Technologies Home Two - Best It Solution Provider - HTML5 Template 2021
     </title>
 
     <!-- Meta Data -->
@@ -84,7 +84,7 @@
                       <a href="blog-details-no-sidebar.html" class="logo__link">
                         <img
                           src="assets/images/logo-full-white.png"
-                          alt="IT Solution Techkit"
+                          alt="IT Solution Deltech Technologies"
                         />
                       </a>
                     </div>
@@ -92,7 +92,7 @@
                       <a href="index-2.html" class="logo__link">
                         <img
                           src="assets/images/logo.png"
-                          alt="IT Solution Techkit"
+                          alt="IT Solution Deltech Technologies"
                         />
                       </a>
                     </div>
@@ -232,7 +232,7 @@
             <a href="index-2.html">
               <img
                 class="logo-small"
-                alt="Techkit"
+                alt="Deltech Technologies"
                 src="assets/images/logo.png"
               />
             </a>
@@ -1025,7 +1025,7 @@
                 <div class="col-sm-12">
                   <div class="footer__copyright">
                     <p class="footer__copyright_text">
-                      © 2021 <a href="index-2.html">Techkit</a>. All Rights
+                      © 2021 <a href="index-2.html">Deltech Technologies</a>. All Rights
                       Reserved by
                       <a href="https://www.radiustheme.com/" rel="nofollow"
                         >RadiusTheme</a
@@ -1133,5 +1133,5 @@
     <script src="assets/js/custom.js"></script>
   </body>
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/blog-details-no-sidebar.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:47 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/blog-details-no-sidebar.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:47 GMT -->
 </html>
