--- a/radiustheme.com/demo/html/techkit/it-modern.html
+++ b/radiustheme.com/demo/html/techkit/it-modern.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/it-modern.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:12 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/it-modern.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:12 GMT -->
 <head>
   <!-- Page Title -->
   <title>
-    Techkit Home Two - Best It Solution Provider - HTML5 Template 2021
+    Deltech Technologies Home Two - Best It Solution Provider - HTML5 Template 2021
   </title>
 
   <!-- Meta Data -->
@@ -60,8 +60,8 @@
                 <div class="col-xl-2 col-lg-2">
                   <div class="logo position-relative">
                     <a href="index-2.html" class="logo__link">
-                      <img src="assets/images/logo-light.png" alt="IT Solution Techkit" class="logo__light" />
-                      <img src="assets/images/logo.png" alt="IT Solution Techkit" class="logo__dark" />
+                      <img src="assets/images/logo-light.png" alt="IT Solution Deltech Technologies" class="logo__light" />
+                      <img src="assets/images/logo.png" alt="IT Solution Deltech Technologies" class="logo__dark" />
                     </a>
                   </div>
                 </div>
@@ -200,7 +200,7 @@
       <div class="rt-header-menu mean-container position-relative" id="meanmenu">
         <div class="mean-bar">
           <a href="it-agency.html">
-            <img class="logo-small" alt="Techkit" src="assets/images/logo.png" />
+            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
           </a>
           <form class="header-bottom__col">
             <div class="header-search">
@@ -1294,7 +1294,7 @@
               <div class="col-sm-12">
                 <div class="footer__copyright">
                   <p class="footer__copyright_text footer-copyright--modern">
-                    © 2021 <a href="index-2.html">Techkit</a>. All Rights
+                    © 2021 <a href="index-2.html">Deltech Technologies</a>. All Rights
                     Reserved by
                     <a href="https://www.radiustheme.com/" rel="nofollow">RadiusTheme</a>
                   </p>
@@ -1323,19 +1323,19 @@
                 <a href="index-2.html">Home</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/about.html">About</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/service-layout1.html">Service</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/service-layout1.html">Service</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/gallery-grid-2-column.html">Portfolio</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/gallery-grid-2-column.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/blog-grid.html">Blog</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/blog-grid.html">Blog</a>
               </li>
               <li class="nav-item">
                 <a href="contact.html">Contact</a>
@@ -1426,5 +1426,5 @@
 </body>
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/it-modern.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:20 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/it-modern.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:20 GMT -->
 </html>
