--- a/radiustheme.com/demo/html/techkit/contact.html
+++ b/radiustheme.com/demo/html/techkit/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-<!-- Mirrored from radiustheme.com/demo/html/techkit/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:47 GMT -->
+
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:47 GMT -->
 <head>
     <!-- Page Title -->
     <title>
-      Techkit Home Two - Best It Solution Provider - HTML5 Template 2021
+      Deltech Technologies Home Two - Best It Solution Provider - HTML5 Template 2021
     </title>
 
     <!-- Meta Data -->
@@ -80,7 +80,7 @@
                       <a href="contact.html" class="logo__link">
                         <img
                           src="assets/images/logo-full-white.png"
-                          alt="IT Solution Techkit"
+                          alt="IT Solution Deltech Technologies"
                         />
                       </a>
                     </div>
@@ -88,7 +88,7 @@
                       <a href="index-2.html" class="logo__link">
                         <img
                           src="assets/images/logo.png"
-                          alt="IT Solution Techkit"
+                          alt="IT Solution Deltech Technologies"
                         />
                       </a>
                     </div>
@@ -97,121 +97,23 @@
                 <div class="header-bottom__col">
                   <div class="main-menu main-menu--light">
                     <nav class="main-menu__nav">
-                      <ul>
-                        <li class="main-menu__nav_sub list">
-                          <a class="animation" href="index-2.html">Home</a>
-                          <ul class="main-menu__dropdown">
-                            <li><a href="index-2.html">Main Home</a></li>
-                            <li>
-                              <a href="software-innovation.html"
-                                >Software Company</a
-                              >
-                            </li>
-                            <li><a href="it-agency.html">IT Agency</a></li>
-
-                            <li>
-                              <a href="vertical-slider.html">Vertical Slider</a>
-                            </li>
-                            <li>
-                              <a href="it-modern.html">IT Modern</a>
-                            </li>
-                            <li>
-                              <a href="it-startup.html">IT Startup</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="main-menu__nav_sub list">
-                          <a class="animation" href="about-us.html">Company</a>
-                          <ul class="main-menu__dropdown">
-                            <li><a href="about-us.html">About Us</a></li>
-                            <li>
-                              <a href="why-chose-us.html">Why Chose Us</a>
-                            </li>
-                            <li><a href="faq.html">Help & FAQ'S</a></li>
-                            <li>
-                              <a href="history.html">Our History</a>
-                            </li>
-                            <li>
-                              <a href="careers.html">Careers</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="main-menu__nav_sub list">
-                          <a class="animation" href="it-solution.html"
-                            >It Solutions</a
-                          >
-                          <ul class="main-menu__dropdown">
-                            <li><a href="it-solution.html">It Solutions</a></li>
-                            <li>
-                              <a href="it-services.html">It Services</a>
-                            </li>
-                            <li>
-                              <a href="industries-services.html"
-                                >Industries Services</a
-                              >
-                            </li>
-                            <li>
-                              <a href="services-details.html"
-                                >Services Details 01</a
-                              >
-                            </li>
-                            <li>
-                              <a href="services-details-02.html"
-                                >Services Details 02</a
-                              >
-                            </li>
-                            <li>
-                              <a href="services-details-03.html"
-                                >Services Details 03</a
-                              >
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="main-menu__nav_sub list">
-                          <a class="animation" href="index-2.html">Pages</a>
-                          <ul class="main-menu__dropdown">
-                            <li><a href="team.html">Our Team</a></li>
-                            <li>
-                              <a href="price.html">Pricing Plans</a>
-                            </li>
-                            <li>
-                              <a href="404.html">404 Page</a>
-                            </li>
-                            <li>
-                              <a href="case-01.html">Case Studies 01</a>
-                            </li>
-                            <li>
-                              <a href="case-02.html">Case Studies 02</a>
-                            </li>
-                            <li>
-                              <a href="case-03.html">Case Studies 03</a>
-                            </li>
-                            <li>
-                              <a href="case-details.html">Case Details</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="main-menu__nav_sub list">
-                          <a class="animation" href="blog-details.html">Blogs</a>
-                          <ul class="main-menu__dropdown">
-                            <li><a href="grid-layout.html">Grid Layout</a></li>
-                            <li>
-                              <a href="list-layout.html">List Layout</a>
-                            </li>
-                            <li>
-                              <a href="blog-details-no-sidebar.html"
-                                >No Sidebar</a
-                              >
-                            </li>
-                            <li>
-                              <a href="blog-details.html">Blog Details</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="list">
-                          <a class="animation" href="contact.html">Contact</a>
-                        </li>
-                      </ul>
+                       <ul>
+                      <li class="main-menu__nav">
+                        <a href="index.html">Home</a>
+                      </li>
+                      <li class="main-menu__nav">
+                        <a class="animation" href="index.html#ItServices">It Solutions</a>
+                      </li>
+                      <li class="main-menu__nav">
+                        <a class="animation" href="index.html#aboutus">About Us</a>
+                      </li>
+                      <li class="main-menu__nav">
+                        <a class="animation" href="index.html#howwework">How We Work</a>
+                      </li>
+                      <li class="list">
+                        <a class="animation" href="contact.html">Contact</a>
+                      </li>
+                    </ul>
                     </nav>
                   </div>
                 </div>
@@ -228,7 +130,7 @@
             <a href="index-2.html">
               <img
                 class="logo-small"
-                alt="Techkit"
+                alt="Deltech Technologies"
                 src="assets/images/logo.png"
               />
             </a>
@@ -250,111 +152,26 @@
           </div>
           <div class="rt-slide-nav">
             <div class="offscreen-navigation">
-              <nav class="menu-main-primary-container">
-                <ul class="menu">
-                  <li class="list menu-item-parent menu-item-has-children">
-                    <a class="animation" href="index-2.html">Home</a>
-                    <ul class="main-menu__dropdown sub-menu">
-                      <li><a href="index-2.html">Main Home</a></li>
-                      <li>
-                        <a href="software-innovation.html"> Software Company</a>
-                      </li>
-                      <li><a href="it-agency.html">IT Agency</a></li>
+            <nav class="menu-main-primary-container">
+              <ul class="menu">
 
-                      <li>
-                        <a href="vertical-slider.html">Vertical Slider</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="list menu-item-parent menu-item-has-children">
-                    <a class="animation" href="about-us.html">Company</a>
-                    <ul class="main-menu__dropdown sub-menu">
-                      <li><a href="about-us.html">About Us</a></li>
-                      <li>
-                        <a href="why-chose-us.html">Why Chose Us</a>
-                      </li>
-                      <li><a href="faq.html">Help & FAQ'S</a></li>
-                      <li>
-                        <a href="history.html">Our History</a>
-                      </li>
-                      <li>
-                        <a href="careers.html">Careers</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="list menu-item-parent menu-item-has-children">
-                    <a class="animation" href="it-solution.html"
-                      >It Solutions</a
-                    >
-                    <ul class="main-menu__dropdown sub-menu">
-                      <li><a href="it-solution.html">It Solutions</a></li>
-                      <li>
-                        <a href="it-services.html">It Services</a>
-                      </li>
-                      <li>
-                        <a href="industries-services.html"
-                          >Industries Services</a
-                        >
-                      </li>
-                      <li>
-                        <a href="services-details.html">Services Details 01</a>
-                      </li>
-                      <li>
-                        <a href="services-details-02.html"
-                          >Services Details 02</a
-                        >
-                      </li>
-                      <li>
-                        <a href="services-details-03.html"
-                          >Services Details 03</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="list menu-item-parent menu-item-has-children">
-                    <a class="animation" href="index-2.html">Pages</a>
-                    <ul class="main-menu__dropdown sub-menu">
-                      <li><a href="team.html">Our Team</a></li>
-                      <li>
-                        <a href="price.html">Pricing Plans</a>
-                      </li>
-                      <li>
-                        <a href="404.html">404 Page</a>
-                      </li>
-                      <li>
-                        <a href="case-01.html">Case Studies 01</a>
-                      </li>
-                      <li>
-                        <a href="case-02.html">Case Studies 02</a>
-                      </li>
-                      <li>
-                        <a href="case-03.html">Case Studies 03</a>
-                      </li>
-                      <li>
-                        <a href="case-details.html">Case Details</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="list menu-item-parent menu-item-has-children">
-                    <a class="animation" href="blog-details.html">Blogs</a>
-                    <ul class="main-menu__dropdown sub-menu">
-                      <li><a href="grid-layout.html">Grid Layout</a></li>
-                      <li>
-                        <a href="list-layout.html">List Layout</a>
-                      </li>
-                      <li>
-                        <a href="blog-details-no-sidebar.html">No Sidebar</a>
-                      </li>
-                      <li>
-                        <a href="blog-details.html">Blog Details</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="list menu-item-parent">
-                    <a class="animation" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </nav>
+                <li class="list menu-item-parent">
+                  <a class="animation" href="index.html">Home</a>
+                </li>
+                <li class="list menu-item-parent">
+                  <a class="animation" href="index.html#ItServices">It Services</a>
+                </li>
+                <li class="list menu-item-parent">
+                  <a class="animation" href="index.html#aboutus">About Us</a>
+                </li>
+                <li class="list menu-item-parent">
+                  <a class="animation" href="index.html#howwework">How We Work</a>
+                </li>
+                <li class="list menu-item-parent">
+                 <a class="animation" href="#">Contact Us</a>
+                </li>
+              </ul>
+            </nav>
             </div>
           </div>
         </div>
@@ -374,19 +191,7 @@
                   <div class="col-sm-12">
                     <div class="page-breadcrumb">
                       <h1 class="heading">Contact Us</h1>
-                      <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                          <li class="breadcrumb-item">
-                            <a href="index-2.html">Home</a>
-                          </li>
-                          <li
-                            class="breadcrumb-item active"
-                            aria-current="page"
-                          >
-                            Contact Us
-                          </li>
-                        </ol>
-                      </nav>
+
                     </div>
                   </div>
                 </div>
@@ -411,20 +216,8 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 col-md-6 mb-30">
-                  <div class="contact-item">
-                    <img
-                      class="icon"
-                      src="assets/images/icon/contact-location.png"
-                      alt=""
-                    />
-                    <h3 class="title title--heading">Office Location</h3>
-                    <p class="address">Melbourne’s GPO 434 Bourke St.</p>
-                    <p class="address">Dhaka VIC 3074, Australia</p>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-30">
-                  <div class="contact-item">
+                <div class="col-md-4">
+                  <div class="contact-item mb-4">
                     <img
                       class="icon"
                       src="assets/images/icon/phone-call.png"
@@ -440,9 +233,7 @@
                       <a class="link" href="tel:4152246564.">(415) 224-6564.</a>
                     </p>
                   </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-30">
-                  <div class="contact-item">
+                  <div class="contact-item mb-4">
                     <img
                       class="icon"
                       src="assets/images/icon/contact-email.png"
@@ -457,21 +248,18 @@
                     <p class="address">
                       <a class="link" href="tel:4152246564.">info@email.com</a>
                     </p>
-                  </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-6 mb-30">
-                  <div class="contact-map">
-                    <div
-                      class="map-box style-1"
-                      data-lat="40.741895"
-                      data-lng="-73.989308"
-                    ></div>
-                  </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-7 align-items-center">
+
                   <form class="contact-form--main" id="contact-form">
+                     <div class="section-heading text-center mb-50">
+                    <span class="section-heading__title_small">
+                      WRITE US A QUERY! WE WE WILL GET BACK TO YOU
+                    </span>
+                    <h2 class="section-heading__title_big">
+                    </h2>
+                  </div>
                     <div class="contact-form p-0">
                       <div class="row">
                         <div class="col-md-12">
@@ -509,12 +297,24 @@
                   </form>
                 </div>
               </div>
+              <div class="row">
+                <!-- <div class="col-lg-6 mb-30">
+                  <div class="contact-map">
+                    <div
+                      class="map-box style-1"
+                      data-lat="40.741895"
+                      data-lng="-73.989308"
+                    ></div>
+                  </div>
+                </div> -->
+
+              </div>
             </div>
           </section>
           <!-- ======= Contact Area End ======= -->
 
           <!-- ======= Contact Area Start ======= -->
-          <section
+          <!-- <section
             class="contact contact--agency"
             data-bg-image="assets/images/bg/contact-bg.jpg"
           >
@@ -536,7 +336,7 @@
                 </div>
               </div>
             </div>
-          </section>
+          </section> -->
           <!-- ======= Contact Area End ======= -->
         </main>
         <!-- ======= Main Wrapper End ======= -->
@@ -703,16 +503,12 @@
           <div
             class="footer--bottom footer--bottom-padding footer--bottom-border"
           >
-            <div class="container">
+              <div class="container">
               <div class="row">
                 <div class="col-sm-12">
                   <div class="footer__copyright">
                     <p class="footer__copyright_text">
-                      © 2021 <a href="index-2.html">Techkit</a>. All Rights
-                      Reserved by
-                      <a href="https://www.radiustheme.com/" rel="nofollow"
-                        >RadiusTheme</a
-                      >
+                      © 2023 <a href="index-2.html">Deltech Technologies</a>
                     </p>
                   </div>
                 </div>
@@ -818,5 +614,5 @@
     <script src="assets/js/custom.js"></script>
   </body>
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:49 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:49 GMT -->
 </html>
