--- a/radiustheme.com/demo/html/techkit/history.html
+++ b/radiustheme.com/demo/html/techkit/history.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-<!-- Mirrored from radiustheme.com/demo/html/techkit/history.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:26 GMT -->
+
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/history.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:26 GMT -->
 <head>
     <!-- Page Title -->
     <title>
-      Techkit Home Two - Best It Solution Provider - HTML5 Template 2021
+      Deltech Technologies Home Two - Best It Solution Provider - HTML5 Template 2021
     </title>
 
     <!-- Meta Data -->
@@ -80,7 +80,7 @@
                       <a href="history.html" class="logo__link">
                         <img
                           src="assets/images/logo-full-white.png"
-                          alt="IT Solution Techkit"
+                          alt="IT Solution Deltech Technologies"
                         />
                       </a>
                     </div>
@@ -88,7 +88,7 @@
                       <a href="index-2.html" class="logo__link">
                         <img
                           src="assets/images/logo.png"
-                          alt="IT Solution Techkit"
+                          alt="IT Solution Deltech Technologies"
                         />
                       </a>
                     </div>
@@ -228,7 +228,7 @@
             <a href="index-2.html">
               <img
                 class="logo-small"
-                alt="Techkit"
+                alt="Deltech Technologies"
                 src="assets/images/logo.png"
               />
             </a>
@@ -853,7 +853,7 @@
                 <div class="col-sm-12">
                   <div class="footer__copyright">
                     <p class="footer__copyright_text">
-                      © 2021 <a href="index-2.html">Techkit</a>. All Rights
+                      © 2021 <a href="index-2.html">Deltech Technologies</a>. All Rights
                       Reserved by
                       <a href="https://www.radiustheme.com/" rel="nofollow"
                         >RadiusTheme</a
@@ -961,5 +961,5 @@
     <script src="assets/js/custom.js"></script>
   </body>
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/history.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:27 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/history.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:27 GMT -->
 </html>
