--- a/radiustheme.com/demo/html/techkit/index-2.html
+++ b/radiustheme.com/demo/html/techkit/index-2.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:38:39 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:38:39 GMT -->
 <head>
   <!-- Page Title -->
-  <title>Techkit - Best It Solution Provider - HTML5 Template 2021</title>
+  <title>Deltech Technologies - Best It Solution Provider - HTML5 Template 2021</title>
 
   <!-- Meta Data -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -139,7 +139,7 @@
           <div class="header-bottom__col">
             <div class="logo">
               <a href="index-2.html" class="logo__link">
-                <img src="assets/images/logo.png" alt="IT Solution Techkit" />
+                <img src="assets/images/logo.png" alt="IT Solution Deltech Technologies" />
               </a>
             </div>
           </div>
@@ -266,7 +266,7 @@
   <div class="rt-header-menu mean-container position-relative" id="meanmenu">
     <div class="mean-bar">
       <a href="index-2.html">
-        <img class="logo-small" alt="Techkit" src="assets/images/logo.png" />
+        <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
       </a>
       <form class="header-bottom__col">
         <div class="header-search">
@@ -515,9 +515,9 @@
                 Over <span class="primary-text-color">2,500+</span> Customers
               </h3>
               <p class="about-content__text wow fadeInUp" data-wow-delay=".5s" data-wow-duration=".9s">
-                
+
                 Grursus mal suada faci lisis Lorem ipsum dolarorit more is ame tion the a consectetur elit. Vesti at bulum nec odio aea the dumm ipsumm ipsum that dolocons rsus mal suada as and fadolorit to the consectetur elit. All a the Lorem Ipsum generators on the Internet tend.
-                
+
               </p>
             </div>
           </div>
@@ -941,7 +941,7 @@
                       <div class="services__awards mb-30">
                         <img src="assets/images/home1/awards-1.png" alt="" class="services__awards_board" />
                         <h3 class="services__awards_title">
-                          <a href="https://www.radiustheme.com/demo/html/techkit/awards-details.html">Top 10 Technology Company 2018</a>
+                          <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/awards-details.html">Top 10 Technology Company 2018</a>
                         </h3>
                         <p class="services__awards_text">
                           Grursus mal suada faci lisis Lorem ipsum is
@@ -954,7 +954,7 @@
                       <div class="services__awards mb-30">
                         <img src="assets/images/home1/awards-2.png" alt="" class="services__awards_board" />
                         <h3 class="services__awards_title">
-                          <a href="https://www.radiustheme.com/demo/html/techkit/awards-details.html">Top Income Tax Awards 2019</a>
+                          <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/awards-details.html">Top Income Tax Awards 2019</a>
                         </h3>
                         <p class="services__awards_text">
                           Grursus mal suada faci lisis Lorem ipsum is
@@ -967,7 +967,7 @@
                       <div class="services__awards mb-30">
                         <img src="assets/images/home1/awards-3.png" alt="" class="services__awards_board" />
                         <h3 class="services__awards_title">
-                          <a href="https://www.radiustheme.com/demo/html/techkit/awards-details.html">Top Training Centre 2020</a>
+                          <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/awards-details.html">Top Training Centre 2020</a>
                         </h3>
                         <p class="services__awards_text">
                           Grursus mal suada faci lisis Lorem ipsum is
@@ -1996,7 +1996,7 @@
           <div class="col-sm-12">
             <div class="footer__copyright">
               <p class="footer__copyright_text">
-                © 2021 <a href="index-2.html">Techkit</a>. All Rights Reserved
+                © 2021 <a href="index-2.html">Deltech Technologies</a>. All Rights Reserved
                 by
                 <a href="https://www.radiustheme.com/" rel="nofollow">RadiusTheme</a>
               </p>
@@ -2041,5 +2041,5 @@
 </body>
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:38:44 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:38:44 GMT -->
 </html>
