--- a/radiustheme.com/demo/html/techkit/it-agency.html
+++ b/radiustheme.com/demo/html/techkit/it-agency.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/it-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:38:50 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/it-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:38:50 GMT -->
 <head>
   <!-- Page Title -->
   <title>
-    Techkit Home Two - Best It Solution Provider - HTML5 Template 2021
+    Deltech Technologies Home Two - Best It Solution Provider - HTML5 Template 2021
   </title>
 
   <!-- Meta Data -->
@@ -71,7 +71,7 @@
               <div class="col-lg-4">
                 <div class="logo">
                   <a href="index-2.html" class="logo__link">
-                    <img src="assets/images/logo-light.png" alt="IT Solution Techkit" />
+                    <img src="assets/images/logo-light.png" alt="IT Solution Deltech Technologies" />
                   </a>
                 </div>
               </div>
@@ -222,7 +222,7 @@
       <div class="rt-header-menu mean-container position-relative" id="meanmenu">
         <div class="mean-bar">
           <a href="it-agency.html">
-            <img class="logo-small" alt="Techkit" src="assets/images/logo.png" />
+            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
           </a>
           <form class="header-bottom__col">
             <div class="header-search">
@@ -716,7 +716,7 @@
                   <div class="solution-tab">
                     <ul class="nav nav-pills" id="pills-tab" role="tablist">
                       <li class="nav-item" role="presentation">
-                        <a href="https://www.radiustheme.com/demo/html/techkit/ser" class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
+                        <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/ser" class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
                           data-bs-target="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">
                           <div class="featured-agency solution-tab__agency wow fadeInUp" data-wow-delay=".2s">
                             <header class="header">
@@ -733,7 +733,7 @@
                         </a>
                       </li>
                       <li class="nav-item" role="presentation">
-                        <a href="https://www.radiustheme.com/demo/html/techkit/ser" class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
+                        <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/ser" class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
                           data-bs-target="#pills-profile" role="tab" aria-controls="pills-profile"
                           aria-selected="false">
                           <div class="featured-agency solution-tab__agency wow fadeInUp" data-wow-delay=".4s">
@@ -753,7 +753,7 @@
                         </a>
                       </li>
                       <li class="nav-item" role="presentation">
-                        <a href="https://www.radiustheme.com/demo/html/techkit/ser" class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
+                        <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/ser" class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
                           data-bs-target="#pills-contact" role="tab" aria-controls="pills-contact"
                           aria-selected="false">
                           <div class="featured-agency solution-tab__agency wow fadeInUp" data-wow-delay=".6s">
@@ -771,7 +771,7 @@
                         </a>
                       </li>
                       <li class="nav-item" role="presentation">
-                        <a href="https://www.radiustheme.com/demo/html/techkit/ser" class="nav-link" id="pills-service-tab" data-bs-toggle="pill"
+                        <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/ser" class="nav-link" id="pills-service-tab" data-bs-toggle="pill"
                           data-bs-target="#pills-contact" role="tab" aria-controls="pills-contact"
                           aria-selected="false">
                           <div class="featured-agency solution-tab__agency wow fadeInUp" data-wow-delay=".8s">
@@ -1524,7 +1524,7 @@
               <div class="col-sm-12">
                 <div class="footer__copyright">
                   <p class="footer__copyright_text">
-                    © 2021 <a href="index-2.html">Techkit</a>. All Rights
+                    © 2021 <a href="index-2.html">Deltech Technologies</a>. All Rights
                     Reserved by
                     <a href="https://www.radiustheme.com/" rel="nofollow">RadiusTheme</a>
                   </p>
@@ -1553,19 +1553,19 @@
                 <a href="index-2.html">Home</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/about.html">About</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/service-layout1.html">Service</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/service-layout1.html">Service</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/gallery-grid-2-column.html">Portfolio</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/gallery-grid-2-column.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.radiustheme.com/demo/html/techkit/blog-grid.html">Blog</a>
+                <a href="https://www.radiustheme.com/demo/html/Deltech Technologies/blog-grid.html">Blog</a>
               </li>
               <li class="nav-item">
                 <a href="contact.html">Contact</a>
@@ -1656,5 +1656,5 @@
 </body>
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/it-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:06 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/it-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:06 GMT -->
 </html>
