--- a/radiustheme.com/demo/html/techkit/it-startup.html
+++ b/radiustheme.com/demo/html/techkit/it-startup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-<!-- Mirrored from radiustheme.com/demo/html/techkit/it-startup.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:20 GMT -->
+
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/it-startup.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:20 GMT -->
 <head>
     <!-- Page Title -->
-    <title>Techkit - Best It Solution Provider - HTML5 Template 2021</title>
+    <title>Deltech Technologies - Best It Solution Provider - HTML5 Template 2021</title>
 
     <!-- Meta Data -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -118,7 +118,7 @@
             <div class="header-bottom__col flex-grow-1">
               <div class="logo">
                 <a href="index-2.html" class="logo__link">
-                  <img src="assets/images/logo.png" alt="IT Solution Techkit" />
+                  <img src="assets/images/logo.png" alt="IT Solution Deltech Technologies" />
                 </a>
               </div>
             </div>
@@ -264,7 +264,7 @@
     <div class="rt-header-menu mean-container position-relative" id="meanmenu">
       <div class="mean-bar">
         <a href="index-2.html">
-          <img class="logo-small" alt="Techkit" src="assets/images/logo.png" />
+          <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
         </a>
         <form class="header-bottom__col">
           <div class="header-search">
@@ -404,7 +404,7 @@
                     class="slider-content__title_small ml13 wow fadeInUp animated"
                     data-wow-delay=".6s"
                   >
-                    Welcome to Techkit</span
+                    Welcome to Deltech Technologies</span
                   >
                   <h2
                     id="ml12"
@@ -558,7 +558,7 @@
                         aria-expanded="false"
                         aria-controls="collapseTwo"
                       >
-                        What are the advantages of Techkit?
+                        What are the advantages of Deltech Technologies?
                       </button>
                     </h2>
                     <div
@@ -1515,7 +1515,7 @@
             <div class="col-sm-12">
               <div class="footer__copyright">
                 <p class="footer__copyright_text">
-                  © 2021 <a href="index-2.html">Techkit</a>. All Rights Reserved
+                  © 2021 <a href="index-2.html">Deltech Technologies</a>. All Rights Reserved
                   by
                   <a href="https://www.radiustheme.com/" rel="nofollow"
                     >RadiusTheme</a
@@ -1586,5 +1586,5 @@
     <script src="assets/js/custom.js"></script>
   </body>
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/it-startup.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:23 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/it-startup.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:23 GMT -->
 </html>
