--- a/radiustheme.com/demo/html/techkit/vertical-slider.html
+++ b/radiustheme.com/demo/html/techkit/vertical-slider.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/vertical-slider.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:06 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/vertical-slider.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:06 GMT -->
 <head>
   <!-- Page Title -->
   <title>
-    Techkit Home Two - Best It Solution Provider - HTML5 Template 2021
+    Deltech Technologies Home Two - Best It Solution Provider - HTML5 Template 2021
   </title>
 
   <!-- Meta Data -->
@@ -59,7 +59,7 @@
             <div class="col-6">
               <div class="logo">
                 <a href="index-2.html" class="logo__link">
-                  <img src="assets/images/logo-light.png" alt="IT Solution Techkit" />
+                  <img src="assets/images/logo-light.png" alt="IT Solution Deltech Technologies" />
                 </a>
               </div>
             </div>
@@ -467,5 +467,5 @@
 </body>
 
 
-<!-- Mirrored from radiustheme.com/demo/html/techkit/vertical-slider.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:12 GMT -->
+<!-- Mirrored from radiustheme.com/demo/html/Deltech Technologies/vertical-slider.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Dec 2022 20:39:12 GMT -->
 </html>
