--- a/radiustheme.com/demo/html/techkit/index.html
+++ b/radiustheme.com/demo/html/techkit/index.html
@@ -67,7 +67,7 @@
               <div class="header-bottom__col">
                 <div class="logo">
                   <a href="index.html" class="logo__link">
-                    <img src="assets/images/Logo-home-2.png" alt="IT Solution Deltech Technologies" />
+                    <img src="assets/images/logo_main.png" width="200" height="200"  alt="IT Solution Deltech Technologies" />
                   </a>
                 </div>
               </div>
@@ -102,7 +102,7 @@
       <div class="rt-header-menu mean-container position-relative " id="meanmenu">
         <div class="mean-bar">
           <a href="software-innovation.html">
-            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
+            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo_main.png" />
           </a>
           <form class="header-bottom__col">
             <div class="header-search">
