--- a/radiustheme.com/demo/html/techkit/it-agency.html
+++ b/radiustheme.com/demo/html/techkit/it-agency.html
@@ -222,7 +222,7 @@
       <div class="rt-header-menu mean-container position-relative" id="meanmenu">
         <div class="mean-bar">
           <a href="it-agency.html">
-            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
+            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo_main.png" />
           </a>
           <form class="header-bottom__col">
             <div class="header-search">
@@ -1545,7 +1545,7 @@
         </div>
         <div class="offcanvas-content">
           <div class="offcanvas-logo">
-            <a href="index-2.html"><img src="assets/images/logo.png" alt="logo" /></a>
+            <a href="index-2.html"><img src="assets/images/logo_main.png" alt="logo" /></a>
           </div>
           <nav>
             <ul class="offcanvas-nav">
