--- a/radiustheme.com/demo/html/techkit/case-details.html
+++ b/radiustheme.com/demo/html/techkit/case-details.html
@@ -87,7 +87,7 @@
                     <div class="logo__sticky">
                       <a href="index-2.html" class="logo__link">
                         <img
-                          src="assets/images/logo.png"
+                          src="assets/images/logo_main.png"
                           alt="IT Solution Deltech Technologies"
                         />
                       </a>
@@ -229,7 +229,7 @@
               <img
                 class="logo-small"
                 alt="Deltech Technologies"
-                src="assets/images/logo.png"
+                src="assets/images/logo_main.png"
               />
             </a>
             <form class="header-bottom__col">
