--- a/radiustheme.com/demo/html/techkit/contact.html
+++ b/radiustheme.com/demo/html/techkit/contact.html
@@ -86,7 +86,7 @@
                     <div class="logo__sticky">
                       <a href="index-2.html" class="logo__link">
                         <img
-                          src="assets/images/logo.png"
+                          src="assets/images/logo_main.png"
                           alt="IT Solution Deltech Technologies"
                         />
                       </a>
@@ -129,8 +129,8 @@
             <a href="index-2.html">
               <img
                 class="logo-small"
-                alt="Deltech Technologies"
-                src="assets/images/logo.png"
+                alt="DELTECH Technologies"
+                src="assets/images/logo_main.png"
               />
             </a>
             <form class="header-bottom__col">
