--- a/radiustheme.com/demo/html/techkit/index-2.html
+++ b/radiustheme.com/demo/html/techkit/index-2.html
@@ -139,7 +139,7 @@
           <div class="header-bottom__col">
             <div class="logo">
               <a href="index-2.html" class="logo__link">
-                <img src="assets/images/logo.png" alt="IT Solution Deltech Technologies" />
+                <img src="assets/images/logo_main.png" alt="IT Solution Deltech Technologies" />
               </a>
             </div>
           </div>
@@ -266,7 +266,7 @@
   <div class="rt-header-menu mean-container position-relative" id="meanmenu">
     <div class="mean-bar">
       <a href="index-2.html">
-        <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
+        <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo_main.png" />
       </a>
       <form class="header-bottom__col">
         <div class="header-search">
