--- a/radiustheme.com/demo/html/techkit/it-modern.html
+++ b/radiustheme.com/demo/html/techkit/it-modern.html
@@ -61,7 +61,7 @@
                   <div class="logo position-relative">
                     <a href="index-2.html" class="logo__link">
                       <img src="assets/images/logo-light.png" alt="IT Solution Deltech Technologies" class="logo__light" />
-                      <img src="assets/images/logo.png" alt="IT Solution Deltech Technologies" class="logo__dark" />
+                      <img src="assets/images/logo_main.png" alt="IT Solution Deltech Technologies" class="logo__dark" />
                     </a>
                   </div>
                 </div>
@@ -200,7 +200,7 @@
       <div class="rt-header-menu mean-container position-relative" id="meanmenu">
         <div class="mean-bar">
           <a href="it-agency.html">
-            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo.png" />
+            <img class="logo-small" alt="Deltech Technologies" src="assets/images/logo_main.png" />
           </a>
           <form class="header-bottom__col">
             <div class="header-search">
@@ -1162,7 +1162,7 @@
               <div class="col-lg-3 col-md-6 mb-30">
                 <div class="footer-widget">
                   <div class="footer-widget__log mb-30">
-                    <a href="index-2.html"><img src="assets/images/logo.png" alt="" /></a>
+                    <a href="index-2.html"><img src="assets/images/logo_main.png" alt="" /></a>
                   </div>
                   <div class="footer-widget__text footer-modern--text">
                     <p class="footer-widget__text_paragraph">
@@ -1315,7 +1315,7 @@
         </div>
         <div class="offcanvas-content">
           <div class="offcanvas-logo">
-            <a href="index-2.html"><img src="assets/images/logo.png" alt="logo" /></a>
+            <a href="index-2.html"><img src="assets/images/logo_main.png" alt="logo" /></a>
           </div>
           <nav>
             <ul class="offcanvas-nav">
