--- a/radiustheme.com/demo/html/techkit/index.html
+++ b/radiustheme.com/demo/html/techkit/index.html
@@ -153,15 +153,13 @@
             <div class="row align-items-center">
               <div class="col-lg-5 col-md-8 mb-30">
                 <div class="hero-content">
-                  <span class="hero-content__title_small wow fadeInUp animated" data-wow-delay=".4s">Optimize IT
-                    Systems</span>
+                  <!-- <span class="hero-content__title_small wow fadeInUp animated" data-wow-delay=".4s">Optimize IT
+                    Systems</span> -->
                   <h1 class="hero-content__title_big wow fadeInUp animated" data-wow-delay=".6s">
-                    Innovative <span class="primary-text-color">Solutions</span> to Boost Your Projects
+                    Expertise, Innovation, Results, Reliability, Growth with <span class="primary-text-color">DELTECH </span> Technologies
                   </h1>
                   <p class="hero-content__paragraph wow fadeInUp animated" data-wow-delay=".8s">
-                    Grursus suada faci Lorem ipsum dolarorit ametion
-                    consectetur elit. Vesti at bulum nec odio aea consectetur
-                    dummy text elit.
+                  Custom website and app development tailored to meet the unique needs of your business and industry.
                   </p>
                   <a href="contact.html"
                     class="btn btn--common btn--primary rt-button-animation-out wow fadeInUp animated"
@@ -196,66 +194,28 @@
                     INDUSTRIES WE SERVE
                   </span>
                   <h2 class="section-software__title_big">
-                    Highly-tailored <span>IT Solutions.</span>
+                    Highly-tailored <span>IT SERVICES.</span>
                   </h2>
                   <p class="section-software__paragraph">
-                    Grursus mal suada faci lisis Lorem ipsum dolarorit more
-                    ametion consectetur elit. Vesti at bulum nec odio aea the
-                    dumm rsus consectetur elit.
+                    "Optimizing your online potential with Deltech Technologies comprehensive services"
                   </p>
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-4 col-md-6 wow fadeInUp mb-30" data-wow-delay=".2s">
-                <div class="services__item services-software">
-                  <div class="services__item_overlay"></div>
-                  <header class="services-software__header">
-                    <i class="flaticon flaticon-create icon"></i>
-                    <h3 class="heading">
-                      <a href="services-details.html">IT Design</a>
-                    </h3>
-                  </header>
-                  <div class="services-software__content">
-                    <p class="paragraph">
-                      Grursus mal suada lisis Lorem ipsum a ametion
-                      consectetur elit fadolorit to the consectetur more elit.
-                    </p>
 
-                  </div>
-                </div>
-              </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp mb-30" data-wow-delay=".4s">
                 <div class="services__item services-software">
                   <div class="services__item_overlay"></div>
                   <header class="services-software__header">
-                    <i class="flaticon flaticon-management icon"></i>
+                    <i class="flaticon flaticon-android icon"></i>
                     <h3 class="heading">
-                      <a href="services-details.html">IT Management</a>
+                      <a href="services-details.html">APP DEVELOPMENT</a>
                     </h3>
                   </header>
                   <div class="services-software__content">
                     <p class="paragraph">
-                      Grursus mal suada lisis Lorem ipsum a ametion
-                      consectetur elit fadolorit to the consectetur more elit.
-                    </p>
-
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp mb-30" data-wow-delay=".6s">
-                <div class="services__item services-software">
-                  <div class="services__item_overlay"></div>
-                  <header class="services-software__header">
-                    <i class="flaticon flaticon-secure-shield icon"></i>
-                    <h3 class="heading">
-                      <a href="services-details.html">Data Security</a>
-                    </h3>
-                  </header>
-                  <div class="services-software__content">
-                    <p class="paragraph">
-                      Grursus mal suada lisis Lorem ipsum a ametion
-                      consectetur elit fadolorit to the consectetur more elit.
+                      We build mobile apps with a passion for advanced technology incorporated with great and enhanced design.
                     </p>
 
                   </div>
@@ -265,53 +225,32 @@
                 <div class="services__item services-software">
                   <div class="services__item_overlay"></div>
                   <header class="services-software__header">
-                    <i class="flaticon flaticon-analytics icon"></i>
+                    <i class="flaticon flaticon-website icon"></i>
                     <h3 class="heading">
-                      <a href="services-details.html">Business Reform</a>
+                      <a href="services-details.html">Website Development</a>
                     </h3>
                   </header>
                   <div class="services-software__content">
                     <p class="paragraph">
-                      Grursus mal suada lisis Lorem ipsum a ametion
-                      consectetur elit fadolorit to the consectetur more elit.
+                     Front-end to Back-end with flawless user experience for transforming your business over web world
                     </p>
 
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp mb-30" data-wow-delay="1s">
+                 <div class="col-lg-4 col-md-6 wow fadeInUp mb-30" data-wow-delay=".2s">
                 <div class="services__item services-software">
                   <div class="services__item_overlay"></div>
                   <header class="services-software__header">
-                    <i class="flaticon flaticon-client icon"></i>
+                    <i class="flaticon flaticon-create icon"></i>
                     <h3 class="heading">
-                      <a href="services-details.html">IT Consultancy</a>
+                      <a href="services-details.html">UI/UX</a>
                     </h3>
                   </header>
                   <div class="services-software__content">
                     <p class="paragraph">
-                      Grursus mal suada lisis Lorem ipsum a ametion
-                      consectetur elit fadolorit to the consectetur more elit.
+                      Designing for functionality and aesthetics with Deltech Technologies UI/UX development.
                     </p>
-
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp mb-30" data-wow-delay="1.2s">
-                <div class="services__item services-software">
-                  <div class="services__item_overlay"></div>
-                  <header class="services-software__header">
-                    <i class="flaticon flaticon-deadline icon"></i>
-                    <h3 class="heading">
-                      <a href="services-details.html">QA & Testing</a>
-                    </h3>
-                  </header>
-                  <div class="services-software__content">
-                    <p class="paragraph">
-                      Grursus mal suada lisis Lorem ipsum a ametion
-                      consectetur elit fadolorit to the consectetur more elit.
-                    </p>
-
                   </div>
                 </div>
               </div>
@@ -343,17 +282,10 @@
                 </div>
                 <div class="about-software__content">
                   <span class="title title--small">
-                    We are a boutique digital transformation consultancy and
-                    development company.
+                    We are a boutique for creating seamless digital experiences across all devices
                   </span>
                   <p class="paragraph">
-                    Grursus mal suada faci lisis Lorem ipsum dolarorit more
-                    ametion consectetur elit. Vesti at bulum nec odio aea the
-                    dumm ipsumm ipsum that dolocons rsus mal suada and
-                    fadolorit to the consectetur elit. All the Lorem Ipsum
-                    generators on the Internet tend to repeat that predefined
-                    chunks as necessary, making this the first true dummy
-                    generator on the Internet.
+                   Discover the power of a well-designed website and apps with Deltech Technologies. Our expert team specializes in creating custom websites tailored to your specific needs. With a focus on user experience and search engine optimization, our websites are designed to increase your online visibility and drive more traffic to your site. Don't settle for a generic website. Choose Deltech Technologies for a website that stands out and delivers results.
                   </p>
 
               </div>
@@ -375,9 +307,7 @@
                     How Assist your <span>Business</span>
                   </h2>
                   <p class="section-software__paragraph">
-                    Grursus mal suada faci lisis Lorem ipsum dolarorit more
-                    ametion consectetur elit. Vesti at bulum nec odio aea the
-                    dumm rsus consectetur elit.
+                    Providing expert technology solutions to empower your business success with our process driven strategies.
                   </p>
                 </div>
               </div>
@@ -972,25 +902,23 @@
                       <form action="#" class="newsletter__form">
                         <div class="section-software p-0 mb-25">
                           <span class="section-software__title_small">
-                            JOIN US
+                            ASK US
                           </span>
                           <h2 class="section-software__title_big">
-                            Subscribe to our <span>Newsletter</span>
+                            Have Any <span>Question?</span>
                           </h2>
                           <p class="section-software__paragraph">
-                            Grursus mal suada faci lisis Lorem ipsum dolarorit
-                            more ametion at bulum nec dumm rsus consectetur
-                            elit.
+                           Contact us today to learn more about our services and how we can help you achieve your business goals in digital world.
                           </p>
                         </div>
                         <div class="newsletter__form_input">
-                          <input type="text" placeholder="Name *" />
-                          <button class="btn">Subscribe</button>
+                          <input type="email" placeholder="Email *" required/>
                         </div>
-                        <div class="newsletter__form_agree">
-                          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                          <span>I agree to my email being stored and used to
-                            receive the newsletter.</span>
+                         <div class="newsletter__form_input">
+                          <textarea cols="35" rows="5" class="border border-grey border-radius px-3 py-2 rounded" placeholder="Write Your Query Here! *" required></textarea>
+                        </div>
+                        <div class="newsletter__form_input mt-2">
+                           <button class="btn btn--primary" style="margin-left:0!important">Subscribe</button>
                         </div>
                       </form>
                     </div>
