Added Content for 4D section

--- a/radiustheme.com/demo/html/techkit/index.html
+++ b/radiustheme.com/demo/html/techkit/index.html
@@ -304,7 +304,7 @@
                     HOW WE WORKS
                   </span>
                   <h2 class="section-software__title_big">
-                    How Assist your <span>Business</span>
+                   Our <span>4D</span>'s
                   </h2>
                   <p class="section-software__paragraph">
                     Providing expert technology solutions to empower your business success with our process driven strategies.
@@ -320,9 +320,8 @@
                     <a href="services-details.html">Discussion</a>
                   </h3>
                   <p class="text text--business">
-                    All the Lorem Ipsum generators on the Internet tend to
-                    repeat as predefined chunks necessary to making this first
-                    true.
+                   Discussing the client's requirements regressively to better understand what
+                   they need and how it will impact the business.
                   </p>
 
                 </div>
@@ -331,40 +330,34 @@
                 <div class="business-item__content">
                   <i class="number number--one number--business">02</i>
                   <h3 class="title title--business">
-                    <a href="services-details.html">Ideas & concepts</a>
+                    <a href="services-details.html">Design</a>
                   </h3>
                   <p class="text text--business">
-                    All the Lorem Ipsum generators on the Internet tend to
-                    repeat as predefined chunks necessary to making this first
-                    true.
+                      With detailed mock-ups and models of the final product allows us to test the functionality and usability of the product before it is released.
                   </p>
-
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6 business-item mb-30">
+              <div class="col-lg-3 col-md-6 business-item mb-10">
                 <div class="business-item__content">
                   <i class="number number--one number--business">03</i>
                   <h3 class="title title--business">
-                    <a href="services-details.html">Testing & Trying</a>
+                    <a href="services-details.html">Development</a>
                   </h3>
                   <p class="text text--business">
-                    All the Lorem Ipsum generators on the Internet tend to
-                    repeat as predefined chunks necessary to making this first
-                    true.
+                   We are committed to putting in the hard work required to bring ideas to life,
+                   we strive to build something that is not just functional but also aesthetic.
                   </p>
-
                 </div>
               </div>
               <div class="col-lg-3 col-md-6 business-item mb-30">
                 <div class="business-item__content">
                   <i class="number number--one number--business">04</i>
                   <h3 class="title title--business">
-                    <a href="services-details.html">Execute & install</a>
+                    <a href="services-details.html">Delivery</a>
                   </h3>
                   <p class="text text--business">
-                    All the Lorem Ipsum generators on the Internet tend to
-                    repeat as predefined chunks necessary to making this first
-                    true.
+                    Deltech Technologies is committed to delivering products that are not only functional
+                    working but also exhaustively tested.
                   </p>
 
                 </div>
